--- a/views/drop/ship/query.haml
+++ b/views/drop/ship/query.haml
@@ -1,24 +1,60 @@
-!!! 5
-%html
-  %head
-    %title= "Poir/Drop"
-  %body
-    %table
-      %tr
-        %td= "quest"
-        %td= "s"
-        %td= "a"
-        %td= "b"
-        %td= "c"
-        %td= "d"
-        %td= "e"
-      - query.each do |v|
-        %tr
-          %td
-            %a{:href => "/drop/map/#{v["_id"]}.html"}= v["_id"]
-          %td= v["value"]["s"].to_i
-          %td= v["value"]["a"].to_i
-          %td= v["value"]["b"].to_i
-          %td= v["value"]["c"].to_i
-          %td= v["value"]["d"].to_i
-          %td= v["value"]["e"].to_i
+%div.container
+  %div.row.row-offcanvas.row-offcanvas-right
+    %div.col-xs-12
+      %ol.breadcrumb
+        %li 主页
+        %li 掉落
+        %li= ConstData.ship[ship_id]["name"]
+      %div.row
+        %div.col-xs-12
+          %div
+            %b 最后更新时间:
+            %span#cache-time
+          %div
+            %b 查询结果总数:
+            %span#query-count
+          %div
+            %b 评价:
+          %ul.nav.nav-pills
+            - ['SAB', 'SA', 'S', 'A', 'B'].each do |r|
+              %li{:role => "presentation", :class => r == rank ? "active" : nil}
+                %a{:href => "/drop/ship/#{ship_id}/#{r}.html"}= r
+      %div.row.top10.hidden
+        %div#toolbar
+        %table.table.table-hover.table-striped{:"data-sort-name" => "dropRate",
+                                               :"data-toolbar" => "#toolbar",
+                                               :"data-search" => "true",
+                                               :"data-show-columns" => "true",
+                                               :"data-show-export" => "true"}
+          %thead
+            %tr
+              %th{:"data-field" => "quest",
+                  :"data-formatter" => "questFormatter",
+                  :"data-switchable" => "false"} 战斗点
+              %th{:"data-field" => "totalCount",
+                  :"data-sortable" => "true"} 数量
+              %th{:"data-field" => "sCount",
+                  :"data-visible" => rank.length > 1 && rank.include?('S') ? "true" : "false",
+                  :"data-sortable" => "true"} S胜
+              %th{:"data-field" => "aCount",
+                  :"data-visible" => rank.length > 1 && rank.include?('A') ? "true" : "false",
+                  :"data-sortable" => "true"} A胜
+              %th{:"data-field" => "bCount",
+                  :"data-visible" => rank.length > 1 && rank.include?('B') ? "true" : "false",
+                  :"data-sortable" => "true"} B胜
+              %th{:"data-field" => "hqLvRange"} 提督等级
+              %th{:"data-field" => "dropRate",
+                  :"data-formatter" => "dropRateFormatter",
+                  :"data-sortable" => "true"} 掉落率
+      %div.top17.busy-indicator
+        %span.glyphicon.glyphicon-refresh.glyphicon-spin
+        %span 少女祈祷中...
+%script{:src => "/scripts/drop/ship.js"}
+%script
+  :plain
+    $(document).ready(function() {
+      loadData({id: #{ship_id}, rank: "#{rank}", name: "#{ConstData.ship[ship_id]["chinese_name"]}"});
+    });
+=haml :duoshuo, :locals => { :key => "drop/ship/#{ship_id}",
+                             :title => "掉落统计##{ConstData.ship[ship_id]["name"]}",
+                             :url => "http://db.kcwiki.moe/drop/ship/#{ship_id}/#{rank}.html" }
