--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -36,17 +36,17 @@
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/11"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-1.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner1-1.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/12"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-2.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner1-2.png", size: 250, protocol: "https")}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/13"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-3.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner1-3.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/14"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-4.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner1-4.png", size: 250, protocol: "https")}
                 %div.row
                   %a{:href => "/drop/map/15"}
                     %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner1-5.png", size: 500, protocol: "https")}
@@ -58,17 +58,17 @@
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/21"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-1.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner2-1.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/22"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-2.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner2-2.png", size: 250, protocol: "https")}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/23"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-3.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner2-3.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/24"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-4.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner2-4.png", size: 250, protocol: "https")}
                 %div.row
                   %a{:href => "/drop/map/25"}
                     %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner2-5.png", size: 500, protocol: "https")}
@@ -79,17 +79,17 @@
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/31"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-1.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner3-1.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/32"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-2.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner3-2.png", size: 250, protocol: "https")}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/33"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-3.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner3-3.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/34"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-4.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner3-4.png", size: 250, protocol: "https")}
                 %div.row
                   %a{:href => "/drop/map/35"}
                     %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner3-5.png", size: 500, protocol: "https")}
@@ -100,17 +100,17 @@
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/41"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-1.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner4-1.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/42"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-2.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner4-2.png", size: 250, protocol: "https")}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/43"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-3.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner4-3.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/44"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-4.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner4-4.png", size: 250, protocol: "https")}
                 %div.row
                   %a{:href => "/drop/map/45"}
                     %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner4-5.png", size: 500, protocol: "https")}
@@ -121,17 +121,17 @@
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/51"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-1.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner5-1.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/52"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-2.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner5-2.png", size: 250, protocol: "https")}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/53"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-3.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner5-3.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/54"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-4.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner5-4.png", size: 250, protocol: "https")}
                 %div.row
                   %a{:href => "/drop/map/55"}
                     %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner5-5.png", size: 500, protocol: "https")}
@@ -142,17 +142,17 @@
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/61"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-1.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner6-1.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/62"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-2.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner6-2.png", size: 250, protocol: "https")}
                 %div.row
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/63"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-3.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-right{:src => kcwiki_get_thumb("MapBanner6-3.png", size: 250, protocol: "https")}
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/64"}
-                      %img.img-responsive.block-center{:src => kcwiki_get_thumb("MapBanner6-4.png", size: 250, protocol: "https")}
+                      %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner6-4.png", size: 250, protocol: "https")}
             %div#area31.tab-pane
               %div.col-xs-12
                 %div.row
