Add filter control in development pages

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -33,10 +33,13 @@
           %span 上提交。
     %script{:src => "//cdn.rawgit.com/codesalsa/backTop/master/dist/jquery.backTop.min.js"}
     %script{:src => "//cdn.rawgit.com/hhurz/tableExport.jquery.plugin/master/tableExport.min.js"}
-    %script{:src => "//cdnjs.cloudflare.com/ajax/libs/FileSaver.js/2014-11-29/FileSaver.min.js"}
+    %script{:src => "//cdn.bootcss.com/FileSaver.js/2014-11-29/FileSaver.min.js"}
+    %script{:src => "//cdn.rawgit.com/lukaskral/bootstrap-table-filter/master/dist/bootstrap-table-filter.min.js"}
+    %script{:src => "//cdn.rawgit.com/Gizeta/bootstrap-table-filter/master/src/ext/bs-table.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap-table/1.11.0/bootstrap-table.min.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap-table/1.11.0/extensions/export/bootstrap-table-export.min.js"}
+    %script{:src => "//cdn.bootcss.com/bootstrap-table/1.11.0/extensions/filter/bootstrap-table-filter.min.js"}
     / IE10 viewport hack for Surface/desktop Windows 8 bug
     %script{:src => "/scripts/ie10-viewport-bug-workaround.js"}
     %script{:src => "/scripts/offcanvas.js"}
