--- a/views/drop/ship.haml
+++ b/views/drop/ship.haml
@@ -21,8 +21,7 @@
                 %a{:href => "/drop/ship/#{ship_id}/#{r}.html"}= r
       %div.row.top10.hidden
         %div#toolbar
-        %table.table.table-hover.table-striped{:"data-sort-name" => "dropRate",
-                                               :"data-toolbar" => "#toolbar",
+        %table.table.table-hover.table-striped{:"data-toolbar" => "#toolbar",
                                                :"data-search" => "true",
                                                :"data-show-columns" => "true",
                                                :"data-show-export" => "true"}
