--- a/views/drop/map.haml
+++ b/views/drop/map.haml
@@ -40,8 +40,7 @@
           %img.img-responsive{:src => kcwiki_get_thumb(KanColleConstant.map[map_id][:map], size: 600, protocol: "http")}
       %div.row.top10.hidden
         %div#toolbar
-        %table.table.table-hover.table-striped{:"data-sort-name" => "dropRate",
-                                               :"data-toolbar" => "#toolbar",
+        %table.table.table-hover.table-striped{:"data-toolbar" => "#toolbar",
                                                :"data-search" => "true",
                                                :"data-show-columns" => "true",
                                                :"data-show-export" => "true",
