--- a/views/drop/ship.haml
+++ b/views/drop/ship.haml
@@ -29,7 +29,8 @@
             %tr
               %th{:"data-field" => "quest",
                   :"data-formatter" => "questFormatter",
-                  :"data-switchable" => "false"} 战斗点
+                  :"data-switchable" => "false",
+                  :"data-sortable" => "true"} 战斗点
               %th{:"data-field" => "totalCount",
                   :"data-sortable" => "true"} 数量
               %th{:"data-field" => "sCount",
