--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -153,6 +153,9 @@
                   %div.col-xs-6.col-no-padding
                     %a{:href => "/drop/map/64"}
                       %img.img-responsive.block-left{:src => kcwiki_get_thumb("MapBanner6-4.png", size: 250, protocol: "https")}
+              %div.row
+                  %a{:href => "/drop/map/65"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner6-5.png", protocol: "https")}
             %div#area31.tab-pane
               %div.col-xs-12
                 %div.row
