Update poi website uri

--- a/views/about/index.haml
+++ b/views/about/index.haml
@@ -49,8 +49,8 @@
         %img{:width => 400, :height => 110, :src => "/images/poi.png"}
       %div
         下载：
-        %a{:href => "http://0u0.moe/poi", :target => "_blank"}
-          http://0u0.moe/poi
+        %a{:href => "https://poi.io", :target => "_blank"}
+          https://poi.io
   %div.row
     %div.col-lg-12
       %h2.page-header Plugin
