Update event-winter2017 models

--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -21,17 +21,9 @@
             %li
               %a{:href => "#area6", :"data-toggle" => "tab"} 中部海域
             %li
-              %a{:href => "#area31", :"data-toggle" => "tab"} 反撃！第二次SN作戦
-            %li
-              %a{:href => "#area32", :"data-toggle" => "tab"} 突入！海上輸送作戦
-            %li
-              %a{:href => "#area33", :"data-toggle" => "tab"} 出撃！礼号作戦
-            %li
-              %a{:href => "#area34", :"data-toggle" => "tab"} 開設！基地航空隊
-            %li
-              %a{:href => "#area35", :"data-toggle" => "tab"} 迎撃！第二次マレー沖海戦
-            %li.active
               %a{:href => "#area36", :"data-toggle" => "tab"} 発令！「艦隊作戦第三法」
+            %li.active
+              %a{:href => "#area37", :"data-toggle" => "tab"} 偵察戦力緊急展開！「光」作戦
           %div.tab-content.top15
             %div#area1.tab-pane
               %div.col-xs-12
@@ -160,95 +152,7 @@
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner6-5.png"), :alt => "MapBanner6-5.png"}
                 %div.row
                   %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner0-5.png"), :alt => "MapBanner0-5.png"}
-            %div#area31.tab-pane
-              %div.col-xs-12
-                %div.row
-                  %a{:href => "/drop/map/ショートランド沖.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Summer2015.png"), :alt => "MapBannerE-1Summer2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/ソロモン海.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Summer2015.png"), :alt => "MapBannerE-2Summer2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/南太平洋海域.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Summer2015.png"), :alt => "MapBannerE-3Summer2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/アイアンボトムサウンド.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Summer2015.png"), :alt => "MapBannerE-4Summer2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/西方海域戦線 カレー洋.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Summer2015.png"), :alt => "MapBannerE-5Summer2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/ソロモン海東部海域.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-6Summer2015.png"), :alt => "MapBannerE-6Summer2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/FS方面海域.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-7Summer2015.png"), :alt => "MapBannerE-7Summer2015.png"}
-            %div#area32.tab-pane
-              %div.col-xs-12
-                %div.row
-                  %a{:href => "/drop/map/ショートランド泊地沖.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Autumn2015.png"), :alt => "MapBannerE-1Autumn2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/コロネハイカラ島沖.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Autumn2015.png"), :alt => "MapBannerE-2Autumn2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/コロネハイカラ島東方沖.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Autumn2015.png"), :alt => "MapBannerE-3Autumn2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/西方海域戦線 ステビア海.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Autumn2015.png"), :alt => "MapBannerE-4Autumn2015.png"}
-                %div.row
-                  %a{:href => "/drop/map/バニラ湾沖.html"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Autumn2015.png"), :alt => "MapBannerE-5Autumn2015.png"}
-            %div#area33.tab-pane
-              %div.col-xs-12
-                %div.row
-                  %a{:href => "/drop/map/331/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Winter2016.png"), :alt => "MapBannerE-1Winter2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/332/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Winter2016.png"), :alt => "MapBannerE-2Winter2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/333/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Winter2016.png"), :alt => "MapBannerE-3Winter2016.png"}
-            %div#area34.tab-pane
-              %div.col-xs-12
-                %div.row
-                  %a{:href => "/drop/map/341/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Spring2016.png"), :alt => "MapBannerE-1Spring2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/342/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Spring2016.png"), :alt => "MapBannerE-2Spring2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/343/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Spring2016.png"), :alt => "MapBannerE-3Spring2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/344/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Spring2016.png"), :alt => "MapBannerE-4Spring2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/345/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Spring2016.png"), :alt => "MapBannerE-5Spring2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/346/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-6Spring2016.png"), :alt => "MapBannerE-6Spring2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/347/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-7Spring2016.png"), :alt => "MapBannerE-7Spring2016.png"}
-            %div#area35.tab-pane
-              %div.col-xs-12
-                %div.row
-                  %a{:href => "/drop/map/351/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Summer2016.png"), :alt => "MapBannerE-1Summer2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/352/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Summer2016.png"), :alt => "MapBannerE-2Summer2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/353/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Summer2016.png"), :alt => "MapBannerE-3Summer2016.png"}
-                %div.row
-                  %a{:href => "/drop/map/354/"}
-                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Summer2016.png"), :alt => "MapBannerE-4Summer2016.png"}
-            %div#area36.tab-pane.active
+            %div#area36.tab-pane
               %div.col-xs-12
                 %div.row
                   %a{:href => "/drop/map/361/"}
@@ -265,6 +169,17 @@
                 %div.row
                   %a{:href => "/drop/map/365/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Autumn2016.png"), :alt => "MapBannerE-5Autumn2016.png"}
+            %div#area37.tab-pane.active
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/371/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Winter2017.png"), :alt => "MapBannerE-1Winter2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/372/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Winter2017.png"), :alt => "MapBannerE-2Winter2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/373/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Winter2017.png"), :alt => "MapBannerE-3Winter2017.png"}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
