--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -22,8 +22,10 @@
               %a{:href => "#area6", :"data-toggle" => "tab"} 中部海域
             %li
               %a{:href => "#area36", :"data-toggle" => "tab"} 発令！「艦隊作戦第三法」
-            %li.active
+            %li
               %a{:href => "#area37", :"data-toggle" => "tab"} 偵察戦力緊急展開！「光」作戦
+            %li.active
+              %a{:href => "#area38", :"data-toggle" => "tab"} 出撃！北東方面 第五艦隊
           %div.tab-content.top15
             %div#area1.tab-pane
               %div.col-xs-12
@@ -169,7 +171,7 @@
                 %div.row
                   %a{:href => "/drop/map/365/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Autumn2016.png"), :alt => "MapBannerE-5Autumn2016.png"}
-            %div#area37.tab-pane.active
+            %div#area37.tab-pane
               %div.col-xs-12
                 %div.row
                   %a{:href => "/drop/map/371/"}
@@ -180,6 +182,23 @@
                 %div.row
                   %a{:href => "/drop/map/373/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Winter2017.png"), :alt => "MapBannerE-3Winter2017.png"}
+            %div#area38.tab-pane.active
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/381/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Spring2017.png"), :alt => "MapBannerE-1Spring2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/382/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Spring2017.png"), :alt => "MapBannerE-2Spring2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/383/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Spring2017.png"), :alt => "MapBannerE-3Spring2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/384/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Spring2017.png"), :alt => "MapBannerE-4Spring2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/385/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Spring2017.png"), :alt => "MapBannerE-5Spring2017.png"}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
