Support send notification

--- a/views/drop/map.haml
+++ b/views/drop/map.haml
@@ -86,8 +86,8 @@
                 - KanColleConstant.area[a_id][:maps].each do |m_id|
                   %a{:class => "list-group-item#{map_id == m_id ? ' active' : ''}",
                      :href => "/drop/map/#{m_id}/"}= "#{KanColleConstant.map[m_id][:name]} (#{m_id.to_s.insert(-2, '-')})"
-%script{:src => "/scripts/drop/constant.js"}
-%script{:src => "/scripts/drop/map.js"}
+%script{:src => "//static.kcwiki.org/db/scripts/drop/constant.js"}
+%script{:src => "//static.kcwiki.org/db/scripts/drop/map.js"}
 %script
   :plain
     $(document).ready(function() {
