--- a/views/drop/ship.haml
+++ b/views/drop/ship.haml
@@ -49,7 +49,7 @@
       %div.top17.busy-indicator
         %span.glyphicon.glyphicon-refresh.glyphicon-spin
         %span 少女祈祷中...
-%script{:src => "/scripts/drop/ship.js"}
+%script{:src => "//static.kcwiki.org/db/scripts/drop/ship.js"}
 %script
   :plain
     $(document).ready(function() {
