--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,16 +7,18 @@
     %title= "poi-statistics @ 舰娘百科 × poi#{locals[:title_append] || ''}"
     %link{:href => "//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css", :rel => "stylesheet"}
     %link{:href => "//cdn.bootcss.com/bootstrap-table/1.11.0/bootstrap-table.min.css", :rel => "stylesheet"}
-    %link{:href => "/stylesheets/offcanvas.css", :rel => "stylesheet"}
-    %link{:href => "/stylesheets/chartist.min.css", :rel => "stylesheet"}
-    %link{:href => "/stylesheets/backTop.css", :rel => "stylesheet"}
-    %link{:href => "/stylesheets/custom.css", :rel => "stylesheet"}
+    %link{:href => "//static.kcwiki.org/db/stylesheets/offcanvas.css", :rel => "stylesheet"}
+    %link{:href => "//static.kcwiki.org/db/stylesheets/chartist.min.css", :rel => "stylesheet"}
+    %link{:href => "//static.kcwiki.org/db/stylesheets/backTop.css", :rel => "stylesheet"}
+    %link{:href => "//static.kcwiki.org/db/stylesheets/custom.css", :rel => "stylesheet"}
     %script{:src => "//cdn.bootcss.com/jquery/2.2.4/jquery.min.js"}
-    %script{:src => "/scripts/chartist.min.js"}
+    %script{:src => "//static.kcwiki.org/db/scripts/chartist.min.js"}
     / HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries
     /[if lt IE 9]
       %script{:src => "//cdn.bootcss.com/html5shiv/r29/html5.min.js"}
       %script{:src => "//cdn.bootcss.com/respond.js/1.4.2/respond.min.js"}
+    / WEB PUSH
+    %link{:rel => "manifest", :href => "/manifest.json"}
   %body
     =haml :navbar, :locals => locals
     =haml :ad
@@ -41,8 +43,8 @@
     %script{:src => "//cdn.bootcss.com/bootstrap-table/1.11.0/extensions/export/bootstrap-table-export.min.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap-table/1.11.0/extensions/filter/bootstrap-table-filter.min.js"}
     / IE10 viewport hack for Surface/desktop Windows 8 bug
-    %script{:src => "/scripts/ie10-viewport-bug-workaround.js"}
-    %script{:src => "/scripts/offcanvas.js"}
+    %script{:src => "//static.kcwiki.org/db/scripts/ie10-viewport-bug-workaround.js"}
+    %script{:src => "//static.kcwiki.org/db/scripts/offcanvas.js"}
 
     :javascript
       $(document).ready(function() {
