--- a/views/navbar.haml
+++ b/views/navbar.haml
@@ -20,3 +20,5 @@
           %a{:href => "http://zh.kcwiki.moe/"} 舰娘百科
         %li{:class => locals[:location] == "about" ? "active" : nil}
           %a{:href => "/about/"} 关于
+        %li{:class => locals[:location] == "settings" ? "active" : nil}
+          %a{:href => "/settings/"} 设置
