--- a/views/settings/index.haml
+++ b/views/settings/index.haml
@@ -1,7 +1,7 @@
 %div.container
   %table{:style => "width:100%"}
     %tr
-      %td 接收更新通知（实验性功能/Firefox）
+      %td 接收更新通知（Chrome / Firefox / Android）
       %td
         %div#sub.btn-group{:role => "group"}
           %button.btn.btn-default{:type => "button", :onclick => "javascript:subscribe()"} 订阅
