--- a/views/drop/index.haml
+++ b/views/drop/index.haml
@@ -18,7 +18,7 @@
               %a{:href => "#area4", :"data-toggle" => "tab"} 西方海域
             %li
               %a{:href => "#area5", :"data-toggle" => "tab"} 南方海域
-            %li.active
+            %li
               %a{:href => "#area6", :"data-toggle" => "tab"} 中部海域
             %li
               %a{:href => "#area36", :"data-toggle" => "tab"} 発令！「艦隊作戦第三法」
@@ -26,6 +26,8 @@
               %a{:href => "#area37", :"data-toggle" => "tab"} 偵察戦力緊急展開！「光」作戦
             %li
               %a{:href => "#area38", :"data-toggle" => "tab"} 出撃！北東方面 第五艦隊
+            %li.active
+              %a{:href => "#area39", :"data-toggle" => "tab"} 西方再打通！欧州救援作戦
           %div.tab-content.top15
             %div#area1.tab-pane
               %div.col-xs-12
@@ -133,7 +135,7 @@
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner5-5.png"), :alt => "MapBanner5-5.png"}
                 %div.row
                   %img.img-responsive.block-center{:src => kcwiki_get_file("MapBanner0-5.png"), :alt => "MapBanner0-5.png"}
-            %div#area6.tab-pane.active
+            %div#area6.tab-pane
               %div.col-xs-12
                 %div.row
                   %div.col-xs-6.col-no-padding
@@ -199,6 +201,29 @@
                 %div.row
                   %a{:href => "/drop/map/385/"}
                     %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Spring2017.png"), :alt => "MapBannerE-5Spring2017.png"}
+            %div#area39.tab-pane.active
+              %div.col-xs-12
+                %div.row
+                  %a{:href => "/drop/map/391/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-1Summer2017.png"), :alt => "MapBannerE-1Summer2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/392/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-2Summer2017.png"), :alt => "MapBannerE-2Summer2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/393/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-3Summer2017.png"), :alt => "MapBannerE-3Summer2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/394/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-4Summer2017.png"), :alt => "MapBannerE-4Summer2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/395/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-5Summer2017.png"), :alt => "MapBannerE-5Summer2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/396/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-6Summer2017.png"), :alt => "MapBannerE-6Summer2017.png"}
+                %div.row
+                  %a{:href => "/drop/map/397/"}
+                    %img.img-responsive.block-center{:src => kcwiki_get_file("MapBannerE-7Summer2017.png"), :alt => "MapBannerE-7Summer2017.png"}
   %div.col-xs-12.col-md-6
     %div.panel-group
       %div.panel.panel-primary
