--- a/views/layout.haml
+++ b/views/layout.haml
@@ -33,11 +33,11 @@
           %span 为本站提供数据支持。如果你在使用的过程中发现什么Bug 抑或是一些好的建议都欢迎在
           %a{:href => "https://github.com/kcwikizh/poi-statistics/issues"}Github Issue
           %span 上提交。
-    %script{:src => "//cdn.rawgit.com/codesalsa/backTop/master/dist/jquery.backTop.min.js"}
-    %script{:src => "//cdn.rawgit.com/hhurz/tableExport.jquery.plugin/master/tableExport.min.js"}
+    %script{:src => "//static.kcwiki.org/poi-static/jquery.backTop.min.js"}
+    %script{:src => "//static.kcwiki.org/poi-static/tableExport.min.js"}
     %script{:src => "//cdn.bootcss.com/FileSaver.js/2014-11-29/FileSaver.min.js"}
-    %script{:src => "//cdn.rawgit.com/lukaskral/bootstrap-table-filter/master/dist/bootstrap-table-filter.min.js"}
-    %script{:src => "//cdn.rawgit.com/Gizeta/bootstrap-table-filter/master/src/ext/bs-table.js"}
+    %script{:src => "//static.kcwiki.org/poi-static/bootstrap-table-filter.min.js"}
+    %script{:src => "//static.kcwiki.org/poi-static/bs-table.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap-table/1.11.0/bootstrap-table.min.js"}
     %script{:src => "//cdn.bootcss.com/bootstrap-table/1.11.0/extensions/export/bootstrap-table-export.min.js"}
